--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "displayName": "JG - Unity Essentials",
     "description": "Provides generic structures, object poolers, project set up helpers and other handy editor scripts",
-    "unity": "2020.3", // The minimum version of Unity your package is compatible with.
+    "unity": "2020.3",
     "author": {
         "name": "Joris Grau"
     }
